[package]
name = "pdf-tools-rust"
description = "A PDF templater and merger written in Rust"
version = "0.1.6"
edition = "2021"
authors = ["Matías Ramirez <matigastirami@gmail.com>"]
repository = "https://github.com/matigastirami/pdf-tools-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lopdf = "0.32.0"
wasm-bindgen = "0.2"
